# PPf24-SnakeGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  after_scale_1000_1000  before_scale_1000_1000  run_experiment.sh
GA/: genetic_algorithm.cpp  genetic_algorithm.h
include/ga/: base_ga.h  individual.h  logger.h  openmp_ga.h  serial_ga.h
include/game/: game.h  snake.h  util.h
include/genetic_algorithm/: base_ga.h
include/nn/: neural_network.h
lib/ga/: base_ga.cpp  individual.cpp  logger.cpp  openmp_ga.cpp  serial_ga.cpp
lib/game/: game.cpp  snake.cpp
lib/genetic_algorithm/: base_ga.cpp
lib/nn/: activation_func.cpp  neural_network.cpp
models/: 1214_openmp-1_1000_1000  1214_openmp-2_1000_1000  great_model
models/debug_8/: exp_openmp1_1024_1500  exp_openmp2_1024_1500  exp_openmp3_1024_1500  exp_openmp4_1024_1500  exp_openmp5_1024_1500  exp_serial1_1024_1500  exp_serial2_1024_1500  exp_serial3_1024_1500  exp_serial4_1024_1500  exp_serial5_1024_1500
models/dynamic_release_8/: exp_openmp10_1024_1500  exp_openmp10_1024_1500.txt  exp_openmp1_1024_1500  exp_openmp1_1024_1500.txt  exp_openmp2_1024_1500  exp_openmp2_1024_1500.txt  exp_openmp3_1024_1500  exp_openmp3_1024_1500.txt  exp_openmp4_1024_1500  exp_openmp4_1024_1500.txt  exp_openmp5_1024_1500  exp_openmp5_1024_1500.txt  exp_openmp6_1024_1500  exp_openmp6_1024_1500.txt  exp_openmp7_1024_1500  exp_openmp7_1024_1500.txt  exp_openmp8_1024_1500  exp_openmp8_1024_1500.txt  exp_openmp9_1024_1500  exp_openmp9_1024_1500.txt
models/release_4/: exp_openmp10_1024_1500  exp_openmp10_1024_1500.txt  exp_openmp1_1024_1500  exp_openmp1_1024_1500.txt  exp_openmp2_1024_1500  exp_openmp2_1024_1500.txt  exp_openmp3_1024_1500  exp_openmp3_1024_1500.txt  exp_openmp4_1024_1500  exp_openmp4_1024_1500.txt  exp_openmp5_1024_1500  exp_openmp5_1024_1500.txt  exp_openmp6_1024_1500  exp_openmp6_1024_1500.txt  exp_openmp7_1024_1500  exp_openmp7_1024_1500.txt  exp_openmp8_1024_1500  exp_openmp8_1024_1500.txt  exp_openmp9_1024_1500  exp_openmp9_1024_1500.txt
models/release_8/: exp_openmp10_1024_1500  exp_openmp1_1024_1500  exp_openmp2_1024_1500  exp_openmp3_1024_1500  exp_openmp4_1024_1500  exp_openmp5_1024_1500  exp_openmp6_1024_1500  exp_openmp7_1024_1500  exp_openmp8_1024_1500  exp_openmp9_1024_1500  exp_serial10_1024_1500  exp_serial1_1024_1500  exp_serial2_1024_1500  exp_serial3_1024_1500  exp_serial4_1024_1500  exp_serial5_1024_1500  exp_serial6_1024_1500  exp_serial7_1024_1500  exp_serial8_1024_1500  exp_serial9_1024_1500
models/scheduled_release_2/: exp_openmp10_1024_1500  exp_openmp10_1024_1500.txt  exp_openmp1_1024_1500  exp_openmp1_1024_1500.txt  exp_openmp2_1024_1500  exp_openmp2_1024_1500.txt  exp_openmp3_1024_1500  exp_openmp3_1024_1500.txt  exp_openmp4_1024_1500  exp_openmp4_1024_1500.txt  exp_openmp5_1024_1500  exp_openmp5_1024_1500.txt  exp_openmp6_1024_1500  exp_openmp6_1024_1500.txt  exp_openmp7_1024_1500  exp_openmp7_1024_1500.txt  exp_openmp8_1024_1500  exp_openmp8_1024_1500.txt  exp_openmp9_1024_1500  exp_openmp9_1024_1500.txt
models/scheduled_release_4/: exp_openmp10_1024_1500  exp_openmp10_1024_1500.txt  exp_openmp1_1024_1500  exp_openmp1_1024_1500.txt  exp_openmp2_1024_1500  exp_openmp2_1024_1500.txt  exp_openmp3_1024_1500  exp_openmp3_1024_1500.txt  exp_openmp4_1024_1500  exp_openmp4_1024_1500.txt  exp_openmp5_1024_1500  exp_openmp5_1024_1500.txt  exp_openmp6_1024_1500  exp_openmp6_1024_1500.txt  exp_openmp7_1024_1500  exp_openmp7_1024_1500.txt  exp_openmp8_1024_1500  exp_openmp8_1024_1500.txt  exp_openmp9_1024_1500  exp_openmp9_1024_1500.txt
models/scheduled_release_8/: exp_openmp10_1024_1500  exp_openmp10_1024_1500.txt  exp_openmp1_1024_1500  exp_openmp1_1024_1500.txt  exp_openmp2_1024_1500  exp_openmp2_1024_1500.txt  exp_openmp3_1024_1500  exp_openmp3_1024_1500.txt  exp_openmp4_1024_1500  exp_openmp4_1024_1500.txt  exp_openmp5_1024_1500  exp_openmp5_1024_1500.txt  exp_openmp6_1024_1500  exp_openmp6_1024_1500.txt  exp_openmp7_1024_1500  exp_openmp7_1024_1500.txt  exp_openmp8_1024_1500  exp_openmp8_1024_1500.txt  exp_openmp9_1024_1500  exp_openmp9_1024_1500.txt
neural_network/: Makefile  activation_func.cpp  neural_network.cpp  test  test.cpp
src/: main.cpp  snake_viewer.cpp  test.cpp  test_ga.cpp  test_game.cpp  test_game_with_nn.cpp  test_nn.cpp  test_openmp.cpp  test_serial.cpp
